name:                  chrononaut
version:               0.1.0
synopsis:              Simple SQL file based migrations for PostgreSQL
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Development, Testing
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

data-files:
    data/migrate.tmpl
  , data/rollback.tmpl

executable chrononaut
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    src
    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -threaded

    build-depends:
          base       > 4.5 && < 5
        , bytestring
        , cmdtheline
        , directory
        , filepath
        , hastache
        , mtl
        , MonadCatchIO-transformers
        , network
        , old-locale
        , postgresql-simple
        , resource-pool
        , safe
        , template-haskell
        , text
        , time
        , transformers
        , unix
